--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ comment:
 # Social
 social: 
     github: onepiecelyk
-    # twitter: 
+    twitter: https://twitter.com/superllyykk
     mail: liuyukunsuper@gmail.com
 
 # 百度统计 
@@ -34,8 +34,7 @@ social:
 # 《----------------- 上面的信息修改成你自己的 ---------------------------》
 #
 #
-#  _post/ 下的文章更换成你自己的文章
-#  帮忙star一下，感谢~😆 地址： https://github.com/leopardpan/leopardpan.github.io
+#  
 #
 #
 # 《--------------- 下面的信息可以自行选择是否修改 ------------------------》
