--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ comment:
 # Social
 social: 
     github: onepiecelyk
-    #twitter: https://twitter.com/superllyykk
+    twitter: https://twitter.com/superllyykk
     mail: liuyukunsuper@gmail.com
 
 # 百度统计 
