--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: 欢迎来到我的个人网站~
 avatarTitle: Francis
 # 头像里面的描述
 avatarDesc: 前端/Java
-url: "http://yukun.online"
+url: "http://liuyukun.vip"
 
 # Comment
 comment:
