--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: 欢迎来到我的个人网站~
 # 头像里面的标题
 avatarTitle: Francis
 # 头像里面的描述
-avatarDesc: 前端/Java
+avatarDesc: 前端
 url: "http://liuyukun.vip"
 
 # Comment
