--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: "http://liuyukun.vip"
 
 # Comment
 comment:
-    disqus: onepiecelyk
+    # disqus: onepiecelyk
     duoshuo: onepiece 
 
 # Social
