--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: 刘御锟
 subtitle: 刘御锟的网站
-description: 我不是一个很好的传播者，但是我要做一个很好的记录者
+description: 我不是一个很好的传播者，但是我努做一个很好的记录者
 # 头像里面的标题
 avatarTitle: Francis
 # 头像里面的描述
