--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Basic
 title: 刘御锟
 subtitle: Francis
-description: 我不是一个很好的传播者，我只是一个记录者
+description: 我不是一个的传播者，我只是一个记录者
 # 头像里面的标题
-avatarTitle: Francis
+avatarTitle: 稳
 # 头像里面的描述
-avatarDesc: 前端
+avatarDesc: CodingMan
 url: "http://liuyukun.vip"
 
 # Comment
