--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 刘御锟
 subtitle: Francis
 description: 我不是一个的传播者，我只是一个记录者
 # 头像里面的标题
-avatarTitle: 稳
+avatarTitle: L
 # 头像里面的描述
 avatarDesc: CodingMan
 url: "http://liuyukun.vip"
