--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: 刘御锟
 subtitle: Francis
-description: 我不是一个的传播者，我只是一个记录者
+description: 兴趣固然重要，但坚持更重要。
 # 头像里面的标题
 avatarTitle: L
 # 头像里面的描述
