--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: 刘御锟
 subtitle: Francis
-description: 兴趣固然重要，但坚持更重要。
+description: 纸上得来终觉浅，绝知此事要躬行！
 # 头像里面的标题
 avatarTitle: L
 # 头像里面的描述
